# ros-training

catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin
catkin_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
catkin_ws/devel/.private/rj_training/: .catkin  _setup_util.py  setup.sh
catkin_ws/devel/.private/rj_training/lib/pkgconfig/: rj_training.pc
catkin_ws/devel/.private/rj_training/lib/rj_training/: listener_node  talker_node
catkin_ws/devel/include/rj_training/: StringWithHeader.h
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  rj_training.pc
catkin_ws/devel/lib/python3/dist-packages/rj_training/: __init__.py
catkin_ws/devel/lib/rj_training/: lisener_node  listener_node  talker_node
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/devel/share/gennodejs/ros/rj_training/: _index.js
catkin_ws/devel/share/rj_training/cmake/: rj_training-msg-extras.cmake  rj_training-msg-paths.cmake  rj_trainingConfig-version.cmake  rj_trainingConfig.cmake
catkin_ws/devel/share/roseus/ros/rj_training/: manifest.l
catkin_ws/logs/rj_training/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.007.log.stderr
catkin_ws/src/rj_training/: CMakeLists.txt  package.xml
catkin_ws/src/rj_training/src/: listener.cpp  talker.cpp
(+13 files in other folders)
